# A320-MCDU

./: .gitignore  CMakeLists.txt  Instrukcja.docx  LICENSE  README.md  button.cpp  button.h  data_base_manager.cpp  data_base_manager.h  database.db  font_manager.cpp  font_manager.h  main.cpp  mcdu.cpp  mcdu.h  screen.cpp  screen.h  ~$strukcja.docx  ~WRL0752.tmp
headers/: button.h  data_base_manager.h  font_manager.h  mcdu.h  screen.h
pages/: active_screen.h  atsu.cpp  data_page.cpp  data_page.h  flight_plan.cpp  flight_plan.h  init_page.cpp  init_page.h  init_page_b.cpp  init_page_b.h  input.cpp  input.h  mcdu_menu.cpp  mcdu_menu.h  performance.cpp  performance.h
pages/flight_plan_branch/: arrival_page_a.cpp  arrival_page_a.h  arrival_page_b.cpp  arrival_page_b.h  departure_page_a.cpp  departure_page_a.h  departure_page_b.cpp  departure_page_b.h
pages/mcdu_menu_branch/: aoc_menu.cpp  aoc_menu.h  atsu.cpp  atsu.h  flt_init.cpp  flt_init.h  fmgc.cpp  fmgc.h  weather_req.cpp  weather_req.h  wx.cpp  wx.h
pages/pages_headers/: atsu.h  mcdu_menu.h
